Delete and visibility button visibility fix, internationalization, css fix, dependecies version number update

--- a/src/components/App/index.css
+++ b/src/components/App/index.css
@@ -384,7 +384,6 @@ input[type=time]::-webkit-clear-button {
 
 .chip-card-content {
   margin-right: 8px;
-  background: #dfdfdf !important;
 }
 
 .chip-card-content-mine {
